# notaire-numerique

./: .gitignore  LICENSE  Makefile  README.md  render.yaml
.github/workflows/: ci.yml
backend/: .env.example  main.py  pyproject.toml
backend/app/: __init__.py  auth.py  chain.py  config.py  crypto.py  database.py  main.py  models.py  pdf.py  registry.py
backend/tests/: conftest.py  test_auth.py  test_crypto_and_chain.py  test_seal.py  test_vault.py
circuits/: HashChecker.circom  README.md  input.sample.json  package-lock.json  package.json
circuits/scripts/: build.sh  compute_input.mjs
contracts/: .env.example  hardhat.config.js  package-lock.json  package.json
contracts/contracts/: Notary.sol
contracts/scripts/: deploy.js
contracts/test/: Notary.test.js
docs/: USAGE.md  migration-postgres.md  onchain-deployment.md
extension/: README.md  background.js  manifest.json  popup.css  popup.html  popup.js
frontend-verify/: app.js  config.js  i18n.js  index.html  landing.css  roadmap.js  styles.css
frontend-verify/app/: app.js  config.js  index.html  styles.css
frontend-verify/legal/: cgu.html  confidentialite.html  legal.css  mentions.html
