[project]
name = "notaire-numerique-backend"
version = "0.1.0"
description = "API FastAPI pour le Notaire Numérique Inviolable"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic[email]>=2.9.0",
    "email-validator>=2.2.0",
    "pydantic-settings>=2.6.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "cryptography>=43.0.0",
    "sqlmodel>=0.0.22",
    "reportlab>=4.2.0",
    "qrcode[pil]>=7.4.2",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
onchain = ["web3>=7.4.0"]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pypdf>=5.1.0",
    "web3>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
